kubernetes/grafana/grafana-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    client: "grafna-app"
