kubernetes/grafana/grafana-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 10000
        runAsNonRoot: true
        runAsGroup: 10001
        fsGroup: 10001 
      containers:
      - name: grafana
        image: grafana:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "750Mi"
            cpu: "250m"
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /index.html
        #     port: http
        #   initialDelaySeconds: 10
        #   periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 1
      #   volumeMounts:
      #     - mountPath: /var/lib/grafana
      #       name: grafana-pv
      # volumes:
      #   - name: grafana-pv
      #     persistentVolumeClaim:
      #       claimName: grafana-pvc
