kubernetes/grafana/alert-manager-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alert-manager-service
  namespace: grafana
spec:
  ports:
  - port: 9093
    targetPort: 9093
  selector:
    app: alert-manager
  type: ClusterIP
