kubernetes/grafana/alert-manager.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-manager-deployment
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-manager
  template:
    metadata:
      labels:
        app: alert-manager
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: alert-manager
        image: alert-manager:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9093
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "250Mi"
            cpu: "100m"
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /index.html
        #     port: http
        #   initialDelaySeconds: 10
        #   periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9093
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: alert-manager-service
  namespace: grafana
spec:
  ports:
  - port: 9093
    targetPort: 9093
  selector:
    app: alert-manager
  type: ClusterIP
