kubernetes/grafana/cadvisor-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor-service
  namespace: grafana
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: cadvisor
  type: ClusterIP
