kubernetes/grafana/cadvisor.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor-daemonset
  namespace: grafana
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: cadvisor
        image: cadvisor:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "400Mi"
            cpu: "400m"
          limits:
            memory: "2000Mi"
            cpu: "800m"
        volumeMounts:
        - name: rootfs
          mountPath: /rootfs
          readOnly: true
        - name: var-run
          mountPath: /var/run
          readOnly: true
        - name: sys
          mountPath: /sys
          readOnly: true
        - name: docker
          mountPath: /var/lib/docker
          readOnly: true
        - name: disk
          mountPath: /dev/disk
          readOnly: true
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: rootfs
        hostPath:
          path: /
      - name: var-run
        hostPath:
          path: /var/run
      - name: sys
        hostPath:
          path: /sys
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: disk
        hostPath:
          path: /dev/disk
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor-service
  namespace: grafana
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: cadvisor
  type: ClusterIP
