kubernetes/grafana/grafana.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    client: "grafna-app"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: grafana
        image: docker.io/bitnami/odoo:16
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "750Mi"
            cpu: "250m"
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /index.html
        #     port: http
        #   initialDelaySeconds: 10
        #   periodSeconds: 3
        # livenessProbe:
        #   failureThreshold: 3
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   successThreshold: 1
        #   tcpSocket:
        #     port: 3000
        #   timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
