kubernetes/grafana/node-exporter-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: grafana
spec:
  ports:
  - port: 9100
    targetPort: 9100
  selector:
    app: node-exporter
  type: ClusterIP
