kubernetes/grafana/node-exporter.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter-daemonset
  namespace: grafana
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      # securityContext:
      #   runAsUser: 10000
      #   runAsNonRoot: true
      #   runAsGroup: 10001
      #   fsGroup: 10001 
      containers:
      - name: node-exporter
        image: node-exporter:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9100
          protocol: TCP
        resources:
          requests:
            memory: "20Mi"
            cpu: "100m"
          limits:
            memory: "50Mi"
            cpu: "200m"
        volumeMounts:
        - mountPath: /host/sys
          mountPropagation: HostToContainer
          name: sys
          readOnly: true
        - mountPath: /host/root
          mountPropagation: HostToContainer
          name: root
          readOnly: true
      volumes:
      - hostPath:
          path: /sys
        name: sys
      - hostPath:
          path: /
        name: root
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: grafana
spec:
  ports:
  - port: 9100
    targetPort: 9100
  selector:
    app: node-exporter
  type: ClusterIP
